feat:添加egg-cluster模块

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "egg-bin dev"
+    "dev": "egg-bin dev",
+    "start": "egg-scripts start --daemon --title=spider_scirichon",
+    "stop": "egg-scripts stop"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "cheerio": "^1.0.0-rc.3",
     "egg": "^2.22.2",
     "egg-mongo-native": "^3.4.3",
+    "egg-scripts": "^2.11.0",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
