feat:增加目标数据插入mongo

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "egg": "^2.22.2",
     "egg-mongo-native": "^3.4.3",
     "egg-scripts": "^2.11.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "neo4j-driver": "^1.7.5"
   },
   "devDependencies": {
     "egg-bin": "^4.13.0"
