--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.3",
     "egg": "^2.22.2",
     "egg-mongo-native": "^3.4.3",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
     "lodash": "^4.17.11",
     "neo4j-driver": "^1.7.5",
